more spacing fixes

--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,41 @@
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+
 @media screen and (max-width: 600px) {
- .topnav a:not(:first-child) {display: none;}
- .topnav a.icon {
-   float: right;
-   display: block;
- }
+  .topnav a:not(:first-child) {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
 }
 
 /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+
 @media screen and (max-width: 600px) {
- .topnav.responsive {position: relative;}
- .topnav.responsive a.icon {
-   position: absolute;
-   right: 0;
-   top: 0;
- }
- .topnav.responsive a {
-   float: none;
-   display: block;
-   text-align: left;
- }
+  .topnav.responsive {
+    position: relative;
+  }
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 }
 
 * {
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.simple-select {
-  width: 85%;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
 }
 
 .topnav {
@@ -62,48 +64,52 @@ body {
 }
 
 /* Hide the link that should open and close the topnav on small screens */
-.topnav .icon {
-    display: none;
-}
 
+.topnav .icon {
+  display: none;
+}
 
 h3 {
   display: inline;
-}​
+}
 
+​
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
+
 @media screen and (max-width: 700px) {
-    .row {
-        flex-direction: column;
-    }
+  .row {
+    flex-direction: column;
+  }
 }
 
 /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
+
 @media screen and (max-width: 400px) {
-    .navbar a {
-        float: none;
-        width:100%;
-    }
+  .navbar a {
+    float: none;
+    width: 100%;
+  }
 }
-
-
-
 
 .dygraph-label {
   font-family: Georgia, Verdana, serif;
   text-align: center;
-              }
+}
 
 .dygraph-title {
-  font-size: 26px; text-shadow: gray 2px 2px 2px;
- }
+  font-size: 26px;
+  text-shadow: gray 2px 2px 2px;
+}
 
 .dygraph-ylabel {
-   font-size: 18px; text-shadow: gray -2px 2px 2px;
+  font-size: 18px;
+  text-shadow: gray -2px 2px 2px;
 }
 
 .chart {
-  border: 1px dashed black; margin: 5px 5px 5px 50px; padding: 2px;
+  border: 1px dashed black;
+  margin: 5px 5px 5px 50px;
+  padding: 2px;
 }
 
 .dygraph-legend {
@@ -112,34 +118,42 @@ h3 {
 }
 
 .column {
-    float: left;
+  float: left;
 }
 
 .sidebar {
-    width: 25%;
+  width: 25%;
+  padding-left: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .main {
-    width: 75%;
+  width: 75%;
 }
 
 /* Clear floats after the columns */
+
 .row:after {
-    content: "";
-    display: table;
-    clear: both;
+  content: "";
+  display: table;
+  clear: both;
 }
+
 @media screen and (max-width: 600px) {
-    .column {
-        width: 100%;
-    }
+  .column {
+    width: 100%;
+  }
 }
+
 @media screen and (min-width: 601px) {
   .sidebar {
-      width: 25%;
+    width: 25%;
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
-
   .main {
-      width: 75%;
+    width: 75%;
   }
 }
